--- a/app/public/home.css
+++ b/app/public/home.css
@@ -10,6 +10,26 @@ h1 {
   border-top: double;
 }
 
+#new-place legend {
+  color: #660000;
+  font-weight: bold;
+}
+
+#new-place input[name="name"] {
+  width: 200px;
+}
+
 .place-list li {
   list-style: none;
+
+}
+
+.place-list li a {
+  text-decoration: none;
+
+}
+
+.place-list li a img {
+  height: 10px;
+  width: 10px;
 }
