looks ugly still but now each link and its delete button are inside a box

--- a/app/public/home.css
+++ b/app/public/home.css
@@ -26,15 +26,19 @@ h1 {
 
 .place-list li {
   list-style: none;
-
+  margin-bottom: 14px;
 }
 
 .place-list li a {
   text-decoration: none;
-
 }
 
 .place-list li a img {
   height: 10px;
   width: 10px;
+}
+
+.place-details {
+  display: inline;
+  border: 1px solid gray;
 }
